--- a/index.html
+++ b/index.html
@@ -5,25 +5,41 @@
         <link rel="stylesheet" type="text/css" href="_css/main.css">
     </head>
     <body>
-        <div>
-            <h1></h1>
-            <h2></h2>
-            <p></p>
+        <div id="page">
+        <div id="header">
+            <h1>Rebecca Young</h1>
+            <div id="nav">
+                <a href="https://htmlcss-swiss13bacon.c9.io/index.html">Home</a>
+                <a href="https://htmlcss-swiss13bacon.c9.io/contact.html">Contant Us</a>
+                <a href="https://htmlcss-swiss13bacon.c9.io/about.html">About</a>
+            </div>
         </div>
-        <div>
-            <h3></h3>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+        <div id="content">
+            <h2 id="div">DIVs</h2>
+                <p>The div tag on its own doesn't do much</p>
+                <div class="spotlight">
+                <h3>DIV tag definition</h3>
+                    <ul id="color">
+                        <li>The DIV tag has no defalut styling</li>
+                        <li>The DIV tag defines content areas</li>
+                        <li>HTML is not funny</li>
+                    </ul>
+                </div>
+            <h2 id="usage">DIV tags usage</h2>
+                <p>Assigning an id to a tag allows us to style that tag (and all its nested tags directly through CSS)</p>
+                <p>To give that id styling it must be named as a selector, along with its decloration block and preceded by a pound sign (hashtag symbol).</p>
+            <h2 id="id">ID usage</h2>
+                <p>The id allows us to identify tags so that they may specifically be addressed within the CSS file</p>
         </div>
-        <div>
-            <h2></h2>
-            <p></p>
-            <p></p>
-            <h2></h2>
-            <p></p>
+        <div id="footer">
+            <h3>List title</h3>
+              <ul>
+                  <li>List item 1</li>
+                  <li>List item 2</li>
+                  <li>List item 3</li>
+              </ul>
+        </div>
         </div>
     </body>
 </html>
+    
