--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="page">
         <div id="header">
-            <h1>Rebecca Young</h1>
+            <h1>Rebecca Young - my site</h1>
             <div id="nav">
                 <a href="https://htmlcss-swiss13bacon.c9.io/index.html">Home</a>
                 <a href="https://htmlcss-swiss13bacon.c9.io/contact.html">Contant Us</a>
