--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <title>**TEMPLATE**</title>
+        <link rel="stylesheet" type="text/css" href="_css/main.css">
     </head>
     <body>
         <div id="page">
         <div id="header">
-            <h1>Rebecca Young - my site</h1>
+            <h1>Rebecca Young</h1>
             <div id="nav">
                 <a href="https://htmlcss-swiss13bacon.c9.io/index.html">Home</a>
                 <a href="https://htmlcss-swiss13bacon.c9.io/contact.html">Contant Us</a>
@@ -15,29 +15,32 @@
             </div>
         </div>
         <div id="content">
-            <h2 id="div">DIVs</h2>
-                <p>The div tag on its own doesn't do much</p>
-                <div class="spotlight">
-                <h3>DIV tag definition</h3>
-                    <ul id="color">
-                        <li>The DIV tag has no defalut styling</li>
-                        <li>The DIV tag defines content areas</li>
-                        <li>HTML is not funny</li>
-                    </ul>
-                </div>
-            <h2 id="usage">DIV tags usage</h2>
-                <p>Assigning an id to a tag allows us to style that tag (and all its nested tags directly through CSS)</p>
-                <p>To give that id styling it must be named as a selector, along with its decloration block and preceded by a pound sign (hashtag symbol).</p>
-            <h2 id="id">ID usage</h2>
-                <p>The id allows us to identify tags so that they may specifically be addressed within the CSS file</p>
+            <h2>It’s Not Just Going To School. It’s Learning Life.</h2>
+                <p>The Patiño School of Entrepreneurship  is a new model for secondary education. It’s an applied entrepreneurship school that fosters real 
+                world skills — critical thinking, problem solving, and collaboration — and as seniors, students launch their own companies.</p>
+                <p><a>Patino School of Entrepreneurship</a> from <a>Fresno Unified</a> on <a>Vimeo</a>.</p>
+            <h2>Thinking Outside The Box</h2>
+                <p>As a foundation for learning, students begin mastering technology: computer literacy, web navigation, website creation, online marketing and
+                coding. By graduation, students will have developed, pitched, and started their own business, and in the process will have learned valuable life
+                and career skills, including working in teams, thinking critically, analyzing data, leading, navigating technology, prioritizing, making decisions,
+                and negotiating. Students learn to work hard, think outside of the boundaries, be team players, and not be afraid to try new things.</p>
+            <h2>10 Reasons To Enroll</h2
+                <ol>
+                    <li>Experience real world learning in a collaborative team environment.</li>
+                    <li>Students make shark tank style pitches for startup capital.</li>
+                    <li>Graduates are prepared for post-secondary education or to start a career.</li>
+                    <li>State of the art facility.</li>
+                    <li>Industry professionals mentor students.</li>
+                    <li>Comfy, professional furniture!</li>
+                    <li>Students are encouraged to find their passion.</li>
+                    <li>Advanced courses are available and students have access to extracurricular activities.</li>
+                    <li>A professional work-oriented environment: no bells, no asking to use the restroom.</li>
+                    <li>Advanced coding and online marketing instruction.</li>
+                    
+                </ol>
         </div>
         <div id="footer">
-            <h3>List title</h3>
-              <ul>
-                  <li>List item 1</li>
-                  <li>List item 2</li>
-                  <li>List item 3</li>
-              </ul>
+            
         </div>
         </div>
     </body>
